# denlab

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix
AK/: AllOf.h  AnyOf.h  ArbitrarySizedEnum.h  Array.h  Assertions.cpp  Assertions.h  Atomic.h  AtomicRefCounted.h  Badge.h  Base64.cpp  Base64.h  BinaryHeap.h  BinarySearch.h  BitCast.h  BitStream.h  Bitmap.h  BitmapView.h  BufferedStream.h  BumpAllocator.h  ByteBuffer.h  ByteReader.h  ByteString.cpp  ByteString.h  CMakeLists.txt  COWVector.h  CharacterTypes.h  Checked.h  CheckedFormatString.h  CircularDeque.h  CircularQueue.h  Concepts.h  ConstrainedStream.cpp  ConstrainedStream.h  DateConstants.h  Debug.h.in  DefaultDelete.h  Demangle.h  DeprecatedFlyString.cpp  DeprecatedFlyString.h  Diagnostics.h  (+140 more)
Documentation/: AdvancedBuildInstructions.md  BareMetalInstallation.md  BuildInstructions.md  BuildInstructionsLadybird.md  BuildInstructionsMacOS.md  BuildInstructionsOther.md  BuildInstructionsWindows.md  BuildProfilingInstructions.md  CLionConfiguration.md  ClangdConfiguration.md  CodingStyle.md  EventLoop.md  FAQ.md  HelixConfiguration.md  HighDPI.md  Links.md  NvimConfiguration.md  Patterns.md  QtCreatorConfiguration.md  README.md  RunningOnRaspberryPi.md  RunningTests.md  SelfHostedRunners.md  SmartPointers.md  SpiceIntegration.md  StringFormatting.md  TransferringFiles.md  Troubleshooting.md  VMware.md  VSCodeConfiguration.md  VimConfiguration.md  VirtualBox.md  WritingManPages.md
Kernel/: CMakeLists.txt  Debug.h.in  Forward.h  KSyms.cpp  KSyms.h  Sections.h  UnixTypes.h  generate-version-file.sh  kprintf.cpp  kstdio.h
Ladybird/: CMakeLists.txt  FontPlugin.cpp  FontPlugin.h  HelperProcess.cpp  HelperProcess.h  ImageCodecPlugin.cpp  ImageCodecPlugin.h  Info.plist  MachPortServer.cpp  MachPortServer.h  README.md  Types.h  Utilities.cpp  Utilities.h
Meta/: analyze-qemu-coverage.sh  build-image-extlinux.sh  build-image-grub-uefi.sh  build-image-grub.sh  build-image-limine.sh  build-image-qemu.sh  build-image-raspberry-pi.sh  build-manpages-website.sh  build-native-partition.sh  build-root-filesystem.sh  check-markdown.sh  check-style.py  debug-kernel.sh  denlab.sh  download_file.py  export-argsparser-manpages.sh  extlinux.conf  generate-embedded-resource-assembly.sh  grub-ebr.cfg  grub-gpt.cfg  grub-mbr.cfg  install-ports-tree.sh  label-pull-requests.js  lb-cherry-picks.py  limine.cfg  lint-gml-format.sh  new-project.sh  refresh-serenity-qtcreator.sh  run.py  run.sh  serenity_gdb.py  shell_include.sh  toot-commits.js
Meta/CMake/Superbuild/: CMakeLists.txt
Meta/gn/secondary/: BUILD.gn
Meta/gn/secondary/Kernel/: BUILD.gn  generate_version_header.py
Meta/gn/secondary/Kernel/Prekernel/: BUILD.gn
Meta/gn/secondary/Ladybird/: BUILD.gn
Meta/gn/secondary/Tests/: unittest.gni
Meta/gn/secondary/Userland/Libraries/LibAudio/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibC/: libc_headers.gni
Meta/gn/secondary/Userland/Libraries/LibCore/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibCrypt/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibGL/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibGPU/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibGUI/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibGfx/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibLocale/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibRegex/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibSystem/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibTLS/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibTest/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibUnicode/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibWeb/Platform/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibWebSocket/: BUILD.gn
Meta/gn/secondary/Userland/Libraries/LibWebView/: BUILD.gn
Tests/LibJS/: CMakeLists.txt  test-invalid-unicode-js.cpp  test-js.cpp  test-test262.cpp  test-value-js.cpp  test262-runner.cpp
Userland/Applets/ClipboardHistory/: CMakeLists.txt  ClipboardHistoryModel.cpp  ClipboardHistoryModel.h  main.cpp
Userland/Applications/CertificateSettings/: CMakeLists.txt  main.cpp
Userland/Applications/ImageViewer/: CMakeLists.txt  ViewWidget.cpp  ViewWidget.h  main.cpp
Userland/Applications/MailSettings/: CMakeLists.txt  MailSettingsWidget.cpp  MailSettingsWidget.h  main.cpp
Userland/Applications/NetworkSettings/: CMakeLists.txt  main.cpp
Userland/Applications/PartitionEditor/: CMakeLists.txt  main.cpp
Userland/DevTools/GMLPlayground/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  main.cpp
Userland/Games/Flood/: Board.cpp  Board.h  BoardWidget.cpp  BoardWidget.h  CMakeLists.txt  MainWidget.h  SettingsDialog.cpp  SettingsDialog.h  SettingsWidget.h  main.cpp
Userland/Games/Spider/: CMakeLists.txt  Game.cpp  Game.h  MainWidget.h  main.cpp
Userland/Libraries/LibCodeComprehension/Cpp/: CMakeLists.txt  ConnectionFromClient.h  Tests.cpp
Userland/Libraries/LibELF/: AuxiliaryVector.h  CMakeLists.txt  Core.h  DynamicLinker.cpp  DynamicLinker.h  DynamicLoader.cpp  DynamicLoader.h  DynamicObject.cpp  DynamicObject.h  Hashes.h  Image.cpp  Image.h  Relocation.cpp  Relocation.h  Validation.cpp  Validation.h
Userland/Libraries/LibELF/Arch/aarch64/: tls.S
Userland/Libraries/LibELF/Arch/x86_64/: entry.S  plt_trampoline.S
Userland/Libraries/LibProtocol/: CMakeLists.txt  Request.cpp  Request.h  RequestClient.cpp  RequestClient.h
Userland/Services/Clipboard/: CMakeLists.txt  ConnectionFromClient.cpp  ConnectionFromClient.h  Storage.cpp  Storage.h  main.cpp
Userland/Services/FileSystemAccessServer/: CMakeLists.txt  main.cpp
Userland/Services/ImageDecoder/: CMakeLists.txt  ConnectionFromClient.cpp  ConnectionFromClient.h  Forward.h  main.cpp
Userland/Services/SpiceAgent/: CMakeLists.txt  Message.cpp  SpiceAgent.cpp  main.cpp
Userland/Services/Taskbar/: CMakeLists.txt  ClockWidget.cpp  ClockWidget.h  QuickLaunchWidget.cpp  ShutdownDialog.cpp  ShutdownDialog.h  TaskbarButton.cpp  TaskbarButton.h  TaskbarWindow.cpp  TaskbarWindow.h  WindowIdentifier.h  WindowList.cpp  WindowList.h  main.cpp
(+6421 files in other folders)
