import("//Meta/gn/build/toolchain/compiler.gni")

group("default") {
  deps = [
    "//Ladybird",
    "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler",
    "//Tests",
    "//Userland/Libraries/LibWeb",
    "//Userland/Utilities:base64",
    "//Userland/Utilities:js",
  ]
  testonly = true
}

group("denlab") {
  deps = [ "//Kernel(//Meta/gn/build/toolchain:denlab)" ]
}

group("macpdf") {
  if (current_os == "mac") {
    deps = [ "//Meta/Lagom/Contrib/MacPDF" ]
  }
}

# A pool called "console" in the root BUILD.gn is magic and represents ninja's
# built-in console pool. (Requires a GN with `gn --version` >= 552353.)
pool("console") {
  depth = 1
}
