source_set("Platform") {
  configs += [ "//Userland/Libraries/LibWeb:configs" ]
  deps = [ "//Userland/Libraries/LibWeb:all_generated" ]
  sources = [
    "AudioCodecPlugin.cpp",
    "AudioCodecPluginAgnostic.cpp",
    "EventLoopPlugin.cpp",
    "EventLoopPluginDenLab.cpp",
    "FontPlugin.cpp",
    "FontPluginDenLab.cpp",
    "ImageCodecPlugin.cpp",
    "Timer.cpp",
    "TimerDenLab.cpp",
  ]
}
